ProductLocationStock was added and tested.

--- a/TestInventoryMgmtSystem/Views/Shared/_Layout.cshtml
+++ b/TestInventoryMgmtSystem/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Stocks" asp-action="Index">Stock</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LocationStocks" asp-action="Index">Location Stock</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductLocationStocks" asp-action="Index">Stock</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
