Views adapted, Detail View was removed. Extra control for price was added and tested

--- a/TestInventoryMgmtSystem/Views/Products/Delete.cshtml
+++ b/TestInventoryMgmtSystem/Views/Products/Delete.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Supplier.Id)
+            @Html.DisplayFor(model => model.Supplier.NameSupplier)
         </dd>
     </dl>
     
