--- a/TestInventoryMgmtSystem/Views/ProductLocationStocks/Delete.cshtml
+++ b/TestInventoryMgmtSystem/Views/ProductLocationStocks/Delete.cshtml
@@ -15,13 +15,13 @@
             @Html.DisplayNameFor(model => model.Product)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Product.Id)
+            @Html.DisplayFor(model => model.Product.ProductNr)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LocationStock)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LocationStock.Id)
+            @Html.DisplayFor(model => model.LocationStock.NameLocation)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TotalInStock)
