--- a/TestInventoryMgmtSystem/Views/Products/Edit.cshtml
+++ b/TestInventoryMgmtSystem/Views/Products/Edit.cshtml
@@ -25,12 +25,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" type="number" step="0.01" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Supplier.NameSupplier" class="control-label"></label>
-                <select asp-for="Supplier.NameSupplier" class="form-control" asp-items="ViewBag.SupplierId"></select>
+                <select asp-for="SupplierId" class="form-control" asp-items="ViewBag.SupplierId"></select>
                 <span asp-validation-for="SupplierId" class="text-danger"></span>
             </div>
             <div class="form-group">
