--- a/TestInventoryMgmtSystem/Views/Products/Index.cshtml
+++ b/TestInventoryMgmtSystem/Views/Products/Index.cshtml
@@ -1,17 +1,25 @@
-﻿@model IEnumerable<TestInventoryMgmtSystem.Models.Product>
+﻿@model IEnumerable<TestInventoryMgmtSystem.ViewModels.Products.IndexViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
+
+<style>
+    #custtable tbody tr {
+        cursor: pointer;
+        color: darkblue;
+    }
+</style>
 
 <h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table id="custtable" class="display cell-border compact">
     <thead>
         <tr>
+            <th>@Html.DisplayNameFor(model => model.Id)</th>
             <th>
                 @Html.DisplayNameFor(model => model.NameProduct)
             </th>
@@ -22,12 +30,14 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Supplier)
+                @Html.DisplayNameFor(model => model.NameSupplier)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
+    </tbody>
+        @*
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -48,5 +58,49 @@
             </td>
         </tr>
 }
-    </tbody>
+        *@
+    
 </table>
+
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
+
+@section Scripts {
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+
+    <script>
+        $(function () {
+            $('#custtable').DataTable({
+                "ajax": {
+                    //Client Side
+                    "url": "/Products/LoadAllProducts",
+                    "type": "GET",
+                    "datatype": "json"
+                },
+                "columns": [
+                    { "data": "id" },
+                    { "data": "nameProduct" },
+                    { "data": "productNr" },
+                    { "data": "price" },
+                    { "data": "nameSupplier" },
+                    { "data": null, "defaultContent": "<a href='' class='del'>Delete </a>" }
+                ]
+                
+            });
+
+            $('#custtable tbody').one('click', 'tr', function (e) {
+                e.preventDefault();
+                var id = $("td:first", this).text();
+                if ($(e.target).is("a.del")) {
+                    $.get('@Url.Action("Delete", "Products")', { id: id }, function (data) {
+                        $("body").html(data);
+                    });
+                    return;
+                }
+                $.get('@Url.Action("Edit", "Products")', { id: id }, function (data) {
+                    $("body").html(data);
+                })
+            });
+
+        });
+    </script>
+}
