ViewModel and Grid added for Stock

--- a/TestInventoryMgmtSystem/Views/ProductLocationStocks/Index.cshtml
+++ b/TestInventoryMgmtSystem/Views/ProductLocationStocks/Index.cshtml
@@ -1,22 +1,31 @@
-﻿@model IEnumerable<TestInventoryMgmtSystem.Models.ProductLocationStock>
+﻿@model IEnumerable<TestInventoryMgmtSystem.ViewModels.ProductLocationStock.IndexViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
+
+<style>
+    #custtable tbody tr {
+        cursor: pointer;
+        color: crimson;
+        font-weight: bold;
+    }
+</style>
 
 <h1>Index Stock</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table id="custtable" class="display cell-border compact">
     <thead>
         <tr>
+            <th>@Html.DisplayNameFor(model => model.Id)</th>
             <th>
-                @Html.DisplayNameFor(model => model.Product)
+                @Html.DisplayNameFor(model => model.ProductNr)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LocationStock)
+                @Html.DisplayNameFor(model => model.LocationName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TotalInStock)
@@ -25,6 +34,8 @@
         </tr>
     </thead>
     <tbody>
+    </tbody>
+    @*
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -42,5 +53,44 @@
             </td>
         </tr>
 }
-    </tbody>
+    *@
 </table>
+
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.11/css/jquery.dataTables.css" />
+
+@section Scripts {
+    <script src="https://cdn.datatables.net/1.13.11/js/jquery.dataTables.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#custtable').DataTable({
+                "ajax": {
+                    "url": "/ProductLocationStocks/LoadAllStocks",
+                    "type": "GET",
+                    "datatype": "json"
+                },
+                "columns": [
+                    { "data": "id" },
+                    { "data": "productNr" },
+                    { "data": "locationName" },
+                    { "data": "totalInStock" },
+                    { "data": null, "defaultContent": "<a href='' class='del'>Delete</a>" }
+                ]
+            });
+
+            $('#custtable tbody').on('click', 'tr', function (e) {
+                e.preventDefault();
+                var id = $("td:first", this).text();
+                if ($(e.target).is("a.del")) {
+                    $.get('@Url.Action("Delete", "ProductLocationStocks")', { id: id }, function (data) {
+                        $("body").html(data);
+                    });
+                    return;
+                }
+                $.get('@Url.Action("Edit", "ProductLocationStocks")', { id: id }, function (data) {
+                    $("body").html(data);
+                });
+            });
+        });
+    </script>
+}
