--- a/TestInventoryMgmtSystem/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TestInventoryMgmtSystem/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,6 +12,22 @@
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            <!-- Nieuwe velden -->
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Firstname" class="form-control" aria-required="true" placeholder="Firstname" />
+                <label asp-for="Input.Firstname">Firstname</label>
+                <span asp-validation-for="Input.Firstname" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Lastname" class="form-control" aria-required="true" placeholder="Lastname" />
+                <label asp-for="Input.Lastname">Lastname</label>
+                <span asp-validation-for="Input.Lastname" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.CellPhoneNr" class="form-control" aria-required="true" placeholder="Cell Phone Number" />
+                <label asp-for="Input.CellPhoneNr">Cell Phone Number</label>
+                <span asp-validation-for="Input.CellPhoneNr" class="text-danger"></span>
+            </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
@@ -27,6 +43,7 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
@@ -39,8 +56,10 @@
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                article
+                                about setting up this ASP.NET application to support logging in via external services
+                            </a>.
                         </p>
                     </div>
                 }
