AdminController was adapted, layout was altered.

--- a/TestInventoryMgmtSystem/Views/Admin/Index.cshtml
+++ b/TestInventoryMgmtSystem/Views/Admin/Index.cshtml
@@ -9,6 +9,11 @@
         cursor: pointer;
         color: cornflowerblue;
     }
+
+    #custtable tbody tr td:nth-child(6) {
+        color: darkmagenta;
+        font-weight:bold;
+    }
 </style>
 
 <h1>Index</h1>
