changed version datatables jquery link

--- a/TestInventoryMgmtSystem/Views/Suppliers/Index.cshtml
+++ b/TestInventoryMgmtSystem/Views/Suppliers/Index.cshtml
@@ -10,6 +10,15 @@
         color : crimson;
         font-weight:bold;
     }
+    #custtable thead tr{
+        font-size:larger;
+        color:mediumaquamarine;
+    }
+
+    #custtable tbody tr td:nth-child(2) {
+        color: darkmagenta;
+        font-weight: bold;
+    }
 </style>
 
 <h1>Index Suppliers</h1>
