--- a/TestInventoryMgmtSystem/Views/Shared/_Layout.cshtml
+++ b/TestInventoryMgmtSystem/Views/Shared/_Layout.cshtml
@@ -36,6 +36,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="ProductLocationStocks" asp-action="Index">Stock</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="StockAnalysis" asp-action="Index">Analysis Stock</a>
+                            </li>
+
                         }
                         @if (User.IsInRole("Stockemployee"))
                         {
